tests/errors/array/non_int_index_errors.sim

        fn f() {
          a: [i64; 3];
          b: bool;
          x: i64;
          entry:
            a = [1i64, 2i64, 3i64];
            b = true;
            x = copy a[copy b];
            return
        }
        